XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__Account_Name_Filter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Account name cleaning rules.</description>
    <fields>
        <fullName>CRMfusionDBR101__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Replace_Value__c</fullName>
        <label>Replace Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Target_Value__c</fullName>
        <label>Target Value</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Type__c</fullName>
        <description>Replace, Prefix or Suffix</description>
        <label>Setting Type</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Account Name Filters</label>
    <listViews>
        <fullName>CRMfusionDBR101__All_Account_Name_Filters</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Index__c</columns>
        <columns>CRMfusionDBR101__Type__c</columns>
        <columns>CRMfusionDBR101__Target_Value__c</columns>
        <columns>CRMfusionDBR101__Replace_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>